<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorBlueDark"
        android:orientation="vertical"
        tools:context="com.app.oh.outfithelp.Vistas.CerrarSesion"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/PreguntaCerrarSesion" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/BTCerrarSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:layout_margin="20dp"
                android:text="@string/Aceptar"/>
            <Button
                android:id="@+id/BTNoCerrarSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:layout_margin="20dp"
                android:text="@string/Cancelar"/>
        </LinearLayout>

        </LinearLayout>
</LinearLayout>