<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    android:background="@color/colorBlueDark"
    tools:context="com.app.oh.outfithelp.Vistas.AgregarPeticion">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="80dp"
                android:paddingBottom="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Agregar Peticion"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="X"
                    android:textSize="20sp"
                    android:backgroundTint="@android:color/white"
                    android:textAlignment="textEnd"
                    android:id="@+id/TVCerrarAgregarPeticion"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:id="@+id/IVAvatarAgregarPeticion"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/Imagen" />
                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/SpinnerAvatar"></Spinner>
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:textSize="18sp"
                        android:text="@string/TipoEvento"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/SpinnerEventos">
                    </Spinner>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:textColor="@android:color/holo_red_dark"
                        android:id="@+id/TVFaltaTipoEvento"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:text="@string/Fecha"
                    />
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:id="@+id/TVFechaAgregarPeticion"/>

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:src="@drawable/ic_calendar"
                    android:layout_gravity="right"
                    android:id="@+id/IBCalendario"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:textColor="@android:color/holo_red_dark"
                android:id="@+id/TVFaltaFecha"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:text="@string/Hora"
                    />
                <TextView
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:id="@+id/TVHoraAgregarPeticion"
                    />
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:src="@drawable/ic_time"
                    android:id="@+id/IBReloj"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:textColor="@android:color/holo_red_dark"
                android:id="@+id/TVFaltaHora"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:hint="@string/Descripcion"
                        android:id="@+id/ETDescripcionAgregarPeticion"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:id="@+id/TVFaltaDescripcion"
                        android:textColor="@android:color/holo_red_dark"
                        />
                    <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:backgroundTint="@color/colorAccent"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/BTAgregarPeticion"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
